--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h4 class="text-xl font-bold mb-2">Formation professionnelle</h4>
             <p class="text-gray-700 mb-4">Développez des compétences pratiques et entrez rapidement sur le marché du
               travail grâce à nos formations spécialisées.</p>
-            <a href="FormationProf.html" class="text-primary font-semibold hover:underline">En savoir plus →</a>
+            <a href="Formation.html#Fp" class="text-primary font-semibold hover:underline">En savoir plus →</a>
           </div>
         </div>
         <div class="bg-light shadow rounded-xl overflow-hidden">
@@ -101,7 +101,7 @@
             <h4 class="text-xl font-bold mb-2">Formation supérieure</h4>
             <p class="text-gray-700 mb-4">Préparez-vous à une carrière internationale grâce à nos programmes
               universitaires de haut niveau.</p>
-            <a href="FormationSup.html" class="text-primary font-semibold hover:underline">En savoir plus →</a>
+            <a href="Formation.html#Fs" class="text-primary font-semibold hover:underline">En savoir plus →</a>
           </div>
         </div>
       </div>
@@ -120,14 +120,14 @@
         </div>
       </div>
       <div class="bg-light shadow rounded-xl overflow-hidden">
-        <img src="img/news2.jpg" alt="Nouvelle 2" class="h-40 w-full object-cover">
+        <img src="img/Atelier.jpg" alt="Nouvelle 2" class="h-40 w-full object-cover">
         <div class="p-4">
-          <h4 class="font-bold mb-2">Nouveau partenariat international</h4>
-          <p class="text-gray-700 text-sm">Easy Bridge signe un accord avec des universités européennes.</p>
+          <h4 class="font-bold mb-2">Nouvel atelier créatif</h4>
+          <p class="text-gray-700 text-sm">Easy Bridge propose un atelier de cake design pour découvrir l’art de décorer des gâteaux avec créativité.</p>
         </div>
       </div>
       <div class="bg-light shadow rounded-xl overflow-hidden">
-        <img src="img/news3.jpg" alt="Nouvelle 3" class="h-40 w-full object-cover">
+        <img src="img/ceremonie.jpg" alt="Nouvelle 3" class="h-40 w-full object-cover">
         <div class="p-4">
           <h4 class="font-bold mb-2">Succès de nos diplômés</h4>
           <p class="text-gray-700 text-sm">Plus de 90% de nos étudiants trouvent un emploi dans les 6 mois.</p>
