--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Accueil | Easy Bridge International Academy</title>
   <link rel="manifest" href="manifest.json">
-
+  <link rel="stylesheet" href="style/css/main.css">
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="js/scripts.js" defer></script>
 
   <script>
     tailwind.config = {
@@ -27,9 +28,11 @@
 </head>
 
 <body class="font-sans text-secondary bg-light">
-  <!-- Header -->
+
+  <!-- Navbar -->
   <header class="bg-light shadow sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-6 md:px-10 py-4 flex justify-between items-center">
+      <!-- Logo -->
       <div class="flex items-center space-x-3">
         <a href="index.html"><img src="img/logo.jpg" alt="Logo EasyBridge" class="h-10"></a>
         <div class="leading-tight">
@@ -62,120 +65,116 @@
       </div>
     </nav>
   </header>
-
-  <!-- Styles -->
-  <style>
-    /* Animation fluide de la hauteur (vertical slide) */
-    .mobile-collapsible {
-      overflow: hidden;
-      transition: height 300ms ease;
-    }
-  </style>
-
-  <!-- Script -->
+  <main>
 
 
 
-  <!-- Hero -->
-  <section class="relative bg-secondary text-light">
-    <img src="img/banner.jpg" alt="Bannière école" class="w-full h-[400px] object-cover opacity-60">
-    <div class="absolute inset-0 flex flex-col items-center justify-center text-center px-4">
-      <h2 class="text-3xl md:text-5xl font-bold mb-4">Construisez votre avenir avec Easy Bridge</h2>
-      <p class="text-lg md:text-xl mb-6">Une éducation internationale, des opportunités mondiales</p>
-      <a href="Formation.html" class="bg-primary text-light px-6 py-3 rounded-lg font-semibold hover:bg-yellow-600">
-        Découvrir nos programmes
+    <!-- Script -->
+
+
+
+    <!-- Hero -->
+    <section class="relative bg-secondary text-light">
+      <img src="img/banner.jpg" alt="Bannière école" class="w-full h-[400px] object-cover opacity-60">
+      <div class="absolute inset-0 flex flex-col items-center justify-center text-center px-4">
+        <h2 class="text-3xl md:text-5xl font-bold mb-4">Construisez votre avenir avec Easy Bridge</h2>
+        <p class="text-lg md:text-xl mb-6">Une éducation internationale, des opportunités mondiales</p>
+        <a href="Formation.html" class="bg-primary text-light px-6 py-3 rounded-lg font-semibold hover:bg-yellow-600">
+          Découvrir nos programmes
+        </a>
+      </div>
+    </section>
+
+    <!-- Présentation -->
+    <section class="max-w-6xl mx-auto px-6 py-12 text-center">
+      <h3 class="text-2xl font-bold mb-4">Bienvenue à Easy Bridge International Academy</h3>
+      <p class="text-gray-700 max-w-3xl mx-auto">
+        Easy Bridge International Academy est une institution moderne qui offre des programmes de formation
+        professionnelle et supérieure adaptés aux besoins du marché mondial. Nos enseignants expérimentés et notre
+        approche pratique vous préparent à réussir dans un monde en constante évolution.
+      </p>
+    </section>
+
+    <!-- Programmes -->
+    <section class="bg-gray-100 py-12">
+      <div class="max-w-6xl mx-auto px-6">
+        <h3 class="text-2xl font-bold text-center mb-8">Nos Programmes</h3>
+        <div class="grid md:grid-cols-2 gap-8">
+          <div class="bg-light shadow rounded-xl overflow-hidden">
+            <img src="img/FormationPRof.jpg" alt="Formation professionnelle" class="w-full h-48 object-cover">
+            <div class="p-6">
+              <h4 class="text-xl font-bold mb-2">Formation professionnelle</h4>
+              <p class="text-gray-700 mb-4">Développez des compétences pratiques et entrez rapidement sur le marché du
+                travail grâce à nos formations spécialisées.</p>
+              <a href="Formation.html#Fp" class="text-primary font-semibold hover:underline">En savoir plus →</a>
+            </div>
+          </div>
+          <div class="bg-light shadow rounded-xl overflow-hidden">
+            <img src="img/FormationSup.jpg" alt="Formation supérieure" class="w-full h-48 object-cover">
+            <div class="p-6">
+              <h4 class="text-xl font-bold mb-2">Formation supérieure</h4>
+              <p class="text-gray-700 mb-4">Préparez-vous à une carrière internationale grâce à nos programmes
+                universitaires de haut niveau.</p>
+              <a href="Formation.html#Fs" class="text-primary font-semibold hover:underline">En savoir plus →</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Actualités -->
+    <section class="max-w-6xl mx-auto px-6 py-12">
+      <h3 class="text-2xl font-bold text-center mb-8">Actualités</h3>
+      <div class="grid md:grid-cols-3 gap-8">
+        <div class="bg-light shadow rounded-xl overflow-hidden">
+          <img src="img/news1.jpg" alt="Nouvelle 1" class="h-40 w-full object-cover">
+          <div class="p-4">
+            <h4 class="font-bold mb-2">Rentrée académique 2025</h4>
+            <p class="text-gray-700 text-sm">Découvrez les nouveautés et événements prévus pour la rentrée.</p>
+          </div>
+        </div>
+        <div class="bg-light shadow rounded-xl overflow-hidden">
+          <img src="img/Atelier.jpg" alt="Nouvelle 2" class="h-40 w-full object-cover">
+          <div class="p-4">
+            <h4 class="font-bold mb-2">Nouvel atelier créatif</h4>
+            <p class="text-gray-700 text-sm">Easy Bridge propose un atelier de cake design pour découvrir l’art de
+              décorer
+              des gâteaux avec créativité.</p>
+          </div>
+        </div>
+        <div class="bg-light shadow rounded-xl overflow-hidden">
+          <img src="img/ceremonie.jpg" alt="Nouvelle 3" class="h-40 w-full object-cover">
+          <div class="p-4">
+            <h4 class="font-bold mb-2">Succès de nos diplômés</h4>
+            <p class="text-gray-700 text-sm">Plus de 90% de nos étudiants trouvent un emploi dans les 6 mois.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Entreprises partenaires -->
+    <section class="bg-gray-100 py-12">
+      <div class="max-w-6xl mx-auto px-6 text-center">
+        <h3 class="text-2xl font-bold mb-8">Nos Partenaires</h3>
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-6 items-center">
+          <img src="img/partner1.png" alt="Partenaire 1" class="h-16 mx-auto">
+          <img src="img/partner2.png" alt="Partenaire 2" class="h-16 mx-auto">
+          <img src="img/partner3.png" alt="Partenaire 3" class="h-16 mx-auto">
+          <img src="img/partner4.png" alt="Partenaire 4" class="h-16 mx-auto">
+        </div>
+      </div>
+    </section>
+
+    <!-- Call to Action -->
+    <section class="py-12 text-center">
+      <h3 class="text-2xl font-bold mb-4">Rejoignez Easy Bridge International Academy</h3>
+      <p class="text-gray-700 mb-6">Construisez votre avenir dès aujourd’hui avec nos programmes de formation adaptés.
+      </p>
+      <a href="ContactezNous.html" class="bg-primary text-light px-6 py-3 rounded-lg font-semibold hover:bg-yellow-600">
+        Contactez-nous
       </a>
-    </div>
-  </section>
-
-  <!-- Présentation -->
-  <section class="max-w-6xl mx-auto px-6 py-12 text-center">
-    <h3 class="text-2xl font-bold mb-4">Bienvenue à Easy Bridge International Academy</h3>
-    <p class="text-gray-700 max-w-3xl mx-auto">
-      Easy Bridge International Academy est une institution moderne qui offre des programmes de formation
-      professionnelle et supérieure adaptés aux besoins du marché mondial. Nos enseignants expérimentés et notre
-      approche pratique vous préparent à réussir dans un monde en constante évolution.
-    </p>
-  </section>
-
-  <!-- Programmes -->
-  <section class="bg-gray-100 py-12">
-    <div class="max-w-6xl mx-auto px-6">
-      <h3 class="text-2xl font-bold text-center mb-8">Nos Programmes</h3>
-      <div class="grid md:grid-cols-2 gap-8">
-        <div class="bg-light shadow rounded-xl overflow-hidden">
-          <img src="img/FormationPRof.jpg" alt="Formation professionnelle" class="w-full h-48 object-cover">
-          <div class="p-6">
-            <h4 class="text-xl font-bold mb-2">Formation professionnelle</h4>
-            <p class="text-gray-700 mb-4">Développez des compétences pratiques et entrez rapidement sur le marché du
-              travail grâce à nos formations spécialisées.</p>
-            <a href="Formation.html#Fp" class="text-primary font-semibold hover:underline">En savoir plus →</a>
-          </div>
-        </div>
-        <div class="bg-light shadow rounded-xl overflow-hidden">
-          <img src="img/FormationSup.jpg" alt="Formation supérieure" class="w-full h-48 object-cover">
-          <div class="p-6">
-            <h4 class="text-xl font-bold mb-2">Formation supérieure</h4>
-            <p class="text-gray-700 mb-4">Préparez-vous à une carrière internationale grâce à nos programmes
-              universitaires de haut niveau.</p>
-            <a href="Formation.html#Fs" class="text-primary font-semibold hover:underline">En savoir plus →</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Actualités -->
-  <section class="max-w-6xl mx-auto px-6 py-12">
-    <h3 class="text-2xl font-bold text-center mb-8">Actualités</h3>
-    <div class="grid md:grid-cols-3 gap-8">
-      <div class="bg-light shadow rounded-xl overflow-hidden">
-        <img src="img/news1.jpg" alt="Nouvelle 1" class="h-40 w-full object-cover">
-        <div class="p-4">
-          <h4 class="font-bold mb-2">Rentrée académique 2025</h4>
-          <p class="text-gray-700 text-sm">Découvrez les nouveautés et événements prévus pour la rentrée.</p>
-        </div>
-      </div>
-      <div class="bg-light shadow rounded-xl overflow-hidden">
-        <img src="img/Atelier.jpg" alt="Nouvelle 2" class="h-40 w-full object-cover">
-        <div class="p-4">
-          <h4 class="font-bold mb-2">Nouvel atelier créatif</h4>
-          <p class="text-gray-700 text-sm">Easy Bridge propose un atelier de cake design pour découvrir l’art de décorer
-            des gâteaux avec créativité.</p>
-        </div>
-      </div>
-      <div class="bg-light shadow rounded-xl overflow-hidden">
-        <img src="img/ceremonie.jpg" alt="Nouvelle 3" class="h-40 w-full object-cover">
-        <div class="p-4">
-          <h4 class="font-bold mb-2">Succès de nos diplômés</h4>
-          <p class="text-gray-700 text-sm">Plus de 90% de nos étudiants trouvent un emploi dans les 6 mois.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Entreprises partenaires -->
-  <section class="bg-gray-100 py-12">
-    <div class="max-w-6xl mx-auto px-6 text-center">
-      <h3 class="text-2xl font-bold mb-8">Nos Partenaires</h3>
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-6 items-center">
-        <img src="img/partner1.png" alt="Partenaire 1" class="h-16 mx-auto">
-        <img src="img/partner2.png" alt="Partenaire 2" class="h-16 mx-auto">
-        <img src="img/partner3.png" alt="Partenaire 3" class="h-16 mx-auto">
-        <img src="img/partner4.png" alt="Partenaire 4" class="h-16 mx-auto">
-      </div>
-    </div>
-  </section>
-
-  <!-- Call to Action -->
-  <section class="py-12 text-center">
-    <h3 class="text-2xl font-bold mb-4">Rejoignez Easy Bridge International Academy</h3>
-    <p class="text-gray-700 mb-6">Construisez votre avenir dès aujourd’hui avec nos programmes de formation adaptés.</p>
-    <a href="ContactezNous.html" class="bg-primary text-light px-6 py-3 rounded-lg font-semibold hover:bg-yellow-600">
-      Contactez-nous
-    </a>
-  </section>
-
+    </section>
+  </main>
   <!-- Footer -->
   <footer class="bg-secondary text-light py-6 text-center text-sm">
     © 2025 Easy Bridge International Academy. Tous droits réservés.
