structuration de scss

--- a/ContactezNous.html
+++ b/ContactezNous.html
@@ -24,7 +24,7 @@
       }
     }
   </script>
-  <link rel="stylesheet" href="style/css/main.css">
+  <link rel="stylesheet" href="style/css/style.css">
 </head>
 
 <body class="font-sans text-secondary bg-light">
