--- a/Formation.html
+++ b/Formation.html
@@ -12,7 +12,7 @@
       theme: { extend: { colors: { primary: '#B08E2A', secondary: '#203749', light: '#FFFFFF' } } }
     }
   </script>
-  <link rel="stylesheet" href="style/css/main.css">
+  <link rel="stylesheet" href="style/css/style.css">
 </head>
 
 <body class="font-sans text-secondary bg-light">
