--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Accueil | Easy Bridge International Academy</title>
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="style/css/main.css">
+  <link rel="stylesheet" href="style/css/style.css">
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="js/scripts.js" defer></script>
