creation de la page inscription et raitement

--- a/ContactezNous.html
+++ b/ContactezNous.html
@@ -47,22 +47,33 @@
         <span class="block w-6 h-0.5 bg-secondary"></span>
       </button>
 
+
       <!-- Menu desktop -->
-      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm">
-        <a href="index.html">Accueil</a>
-        <a href="Formation.html">Nos formations</a>
-        <a href="ContactezNous.html" class="font-semibold text-primary">Infos & Recrutement</a>
-      </nav>
+    
+<nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center">
+  <a href="index.html">Accueil</a>
+  <a href="Formation.html">Nos formations</a>
+  <a href="ContactezNous.html">Infos & Recrutement</a>
+  <!-- Bouton inscription -->
+  <a href="Inscription.html" class="ml-4 bg-primary text-light px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
+    Inscription
+  </a>
+</nav>
+
     </div>
 
     <!-- Menu mobile (dépliage vertical) -->
-    <nav id="mobile-menu" class="mobile-collapsible md:hidden bg-light border-t border-gray-200" style="height:0">
-      <div class="flex flex-col px-6 pb-2">
-        <a href="index.html" class="block py-3 hover:text-primary border-b border-gray-100">Actualités</a>
-        <a href="Formation.html" class="block py-3 hover:text-primary border-b border-gray-100">Nos formations</a>
-        <a href="ContactezNous.html" class="block py-3 hover:text-primary">Infos & Recrutement </a>
-      </div>
-    </nav>
+<nav id="mobile-menu" class="mobile-collapsible md:hidden bg-light border-t border-gray-200" style="height:0">
+  <div class="flex flex-col px-6 pb-2">
+    <a href="index.html" class="block py-3 hover:text-primary border-b border-gold-100">Accueil</a>
+    <a href="Formation.html" class="block py-3 hover:text-primary border-b border-gold-100">Nos formations</a>
+    <a href="ContactezNous.html" class="block py-3 hover:text-primary border-b border-gold-100">Infos & Recrutement</a>
+    <!-- Bouton inscription -->
+    <a href="Inscription.html" class="block mt-3 bg-primary text-light text-center px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
+      Inscription
+    </a>
+  </div>
+</nav>
 
   </header>
   <main>
