--- a/index.html
+++ b/index.html
@@ -49,21 +49,32 @@
       </button>
 
       <!-- Menu desktop -->
-      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm">
-        <a href="index.html">Accueil</a>
-        <a href="Formation.html">Nos formations</a>
-        <a href="ContactezNous.html">Infos & Recrutement</a>
-      </nav>
+    
+<nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm items-center">
+  <a href="index.html">Accueil</a>
+  <a href="Formation.html">Nos formations</a>
+  <a href="ContactezNous.html">Infos & Recrutement</a>
+  <!-- Bouton inscription -->
+  <a href="Inscription.html" class="ml-4 bg-primary text-light px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
+    Inscription
+  </a>
+</nav>
+
     </div>
 
     <!-- Menu mobile (dépliage vertical) -->
-    <nav id="mobile-menu" class="mobile-collapsible md:hidden bg-light border-t border-gray-200" style="height:0">
-      <div class="flex flex-col px-6 pb-2">
-        <a href="index.html" class="block py-3 hover:text-primary border-b border-gold-100">Actualités</a>
-        <a href="Formation.html" class="block py-3 hover:text-primary border-b border-gold-100">Nos formations</a>
-        <a href="ContactezNous.html" class="block py-3 hover:text-primary">Infos & Recrutement</a>
-      </div>
-    </nav>
+<nav id="mobile-menu" class="mobile-collapsible md:hidden bg-light border-t border-gray-200" style="height:0">
+  <div class="flex flex-col px-6 pb-2">
+    <a href="index.html" class="block py-3 hover:text-primary border-b border-gold-100">Accueil</a>
+    <a href="Formation.html" class="block py-3 hover:text-primary border-b border-gold-100">Nos formations</a>
+    <a href="ContactezNous.html" class="block py-3 hover:text-primary border-b border-gold-100">Infos & Recrutement</a>
+    <!-- Bouton inscription -->
+    <a href="Inscription.html" class="block mt-3 bg-primary text-light text-center px-4 py-2 rounded-lg font-semibold hover:bg-yellow-600">
+      Inscription
+    </a>
+  </div>
+</nav>
+
   </header>
   <main>
 
@@ -75,7 +86,7 @@
 
     <!-- Hero -->
     <section class="relative bg-secondary text-light">
-      <img src="img/banner.jpg" alt="Bannière école" class="w-full h-[400px] object-cover opacity-60">
+      <div class="w-full h-[400px] object-cover opacity-60"></div>
       <div class="absolute inset-0 flex flex-col items-center justify-center text-center px-4">
         <h2 class="text-3xl md:text-5xl font-bold mb-4">Construisez votre avenir avec Easy Bridge</h2>
         <p class="text-lg md:text-xl mb-6">Une éducation internationale, des opportunités mondiales</p>
@@ -127,7 +138,7 @@
       <h3 class="text-2xl font-bold text-center mb-8">Actualités</h3>
       <div class="grid md:grid-cols-3 gap-8">
         <div class="bg-light shadow rounded-xl overflow-hidden">
-          <img src="img/news1.jpg" alt="Nouvelle 1" class="h-40 w-full object-cover">
+          <img src="img/Devimage.jpg" alt="Nouvelle 1" class="h-40 w-full object-cover">
           <div class="p-4">
             <h4 class="font-bold mb-2">Rentrée académique 2025</h4>
             <p class="text-gray-700 text-sm">Découvrez les nouveautés et événements prévus pour la rentrée.</p>
